jobs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.26.0 (40646f47)
    traefik.expose: "true"
    traefik.http.middlewares.jobs-strip-prefix.stripprefix.prefixes: /jobs
    traefik.http.routers.jobs.middlewares: jobs-strip-prefix@docker
    traefik.http.routers.jobs.rule: PathPrefix(`/jobs`)
    traefik.http.routers.jobs.service: jobs
    traefik.http.services.jobs.loadbalancer.server.port: "8686"
    traefik.http.services.jobs.loadbalancer.server.scheme: http
  creationTimestamp: null
  labels:
    io.kompose.service: jobs
  name: jobs
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jobs
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.26.0 (40646f47)
        traefik.expose: "true"
        traefik.http.middlewares.jobs-strip-prefix.stripprefix.prefixes: /jobs
        traefik.http.routers.jobs.middlewares: jobs-strip-prefix@docker
        traefik.http.routers.jobs.rule: PathPrefix(`/jobs`)
        traefik.http.routers.jobs.service: jobs
        traefik.http.services.jobs.loadbalancer.server.port: "8686"
        traefik.http.services.jobs.loadbalancer.server.scheme: http
      creationTimestamp: null
      labels:
        io.kompose.network/reportportal: "true"
        io.kompose.service: jobs
    spec:
      containers:
        - env:
            - name: DATASTORE_TYPE
              value: filesystem
            - name: JAVA_OPTS
              value: |
                -Djava.security.egd=file:/dev/./urandom -XX:+UseG1GC -XX:+UseStringDeduplication -XX:G1ReservePercent=20 -XX:InitiatingHeapOccupancyPercent=60 -XX:MaxRAMPercentage=70.0 -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp
            - name: RP_AMQP_ANALYZER-VHOST
              value: analyzer
            - name: RP_AMQP_APIPASS
              value: rabbitmq
            - name: RP_AMQP_APIUSER
              value: rabbitmq
            - name: RP_AMQP_HOST
              value: rabbitmq
            - name: RP_AMQP_MAXLOGCONSUMER
              value: "1"
            - name: RP_AMQP_PASS
              value: rabbitmq
            - name: RP_AMQP_PORT
              value: "5672"
            - name: RP_AMQP_USER
              value: rabbitmq
            - name: RP_DB_HOST
              value: postgres
            - name: RP_DB_NAME
              value: reportportal
            - name: RP_DB_PASS
              value: rppass
            - name: RP_DB_USER
              value: rpuser
            - name: RP_ENVIRONMENT_VARIABLE_CLEAN_ATTACHMENT_CRON
              value: 0 0 */24 * * *
            - name: RP_ENVIRONMENT_VARIABLE_CLEAN_EVENTS_CRON
              value: 0 30 05 * * *
            - name: RP_ENVIRONMENT_VARIABLE_CLEAN_EVENTS_RETENTIONPERIOD
              value: "365"
            - name: RP_ENVIRONMENT_VARIABLE_CLEAN_EXPIREDUSER_CRON
              value: 0 0 */24 * * *
            - name: RP_ENVIRONMENT_VARIABLE_CLEAN_EXPIREDUSER_RETENTIONPERIOD
              value: "365"
            - name: RP_ENVIRONMENT_VARIABLE_CLEAN_LAUNCH_CRON
              value: 0 0 */24 * * *
            - name: RP_ENVIRONMENT_VARIABLE_CLEAN_LOG_CRON
              value: 0 0 */24 * * *
            - name: RP_ENVIRONMENT_VARIABLE_CLEAN_STORAGE_CHUNKSIZE
              value: "20000"
            - name: RP_ENVIRONMENT_VARIABLE_CLEAN_STORAGE_CRON
              value: 0 0 */24 * * *
            - name: RP_ENVIRONMENT_VARIABLE_NOTIFICATION_EXPIREDUSER_CRON
              value: 0 0 */24 * * *
            - name: RP_ENVIRONMENT_VARIABLE_STORAGE_PROJECT_CRON
              value: 0 */5 * * * *
            - name: RP_PROCESSING_LOG_MAXBATCHSIZE
              value: "2000"
            - name: RP_PROCESSING_LOG_MAXBATCHTIMEOUT
              value: "6000"
          image: reportportal/service-jobs:5.11.0
          livenessProbe:
            exec:
              command:
                - curl -f http://0.0.0.0:8686/health || exit 1
            failureThreshold: 10
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 30
          name: reportportal-jobs
          resources: {}
          volumeMounts:
            - mountPath: /data/storage
              name: storage
      restartPolicy: Always
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: storage
status: {}
