migrations-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.network/reportportal: "true"
    io.kompose.service: migrations
  name: migrations
spec:
  containers:
    - env:
        - name: OS_HOST
          value: opensearch
        - name: OS_PORT
          value: "9200"
        - name: OS_PROTOCOL
          value: http
        - name: POSTGRES_DB
          value: reportportal
        - name: POSTGRES_PASSWORD
          value: rppass
        - name: POSTGRES_PORT
          value: "5432"
        - name: POSTGRES_SERVER
          value: postgres
        - name: POSTGRES_USER
          value: rpuser
      image: reportportal/migrations:5.11.0
      name: reportportal-migrations
      resources: {}
  restartPolicy: OnFailure
status: {}
