opensearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: opensearch
  name: opensearch
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: opensearch
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/reportportal: "true"
        io.kompose.service: opensearch
    spec:
      containers:
        - env:
            - name: DISABLE_INSTALL_DEMO_CONFIG
              value: "true"
            - name: OPENSEARCH_JAVA_OPTS
              value: -Xms512m -Xmx512m
            - name: bootstrap.memory_lock
              value: "true"
            - name: discovery.type
              value: single-node
            - name: plugins.security.disabled
              value: "true"
          image: opensearchproject/opensearch:2.11.0
          livenessProbe:
            exec:
              command:
                - curl
                - -s
                - -f
                - http://0.0.0.0:9200/_cat/health
          name: opensearch
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/opensearch/data
              name: opensearch
      restartPolicy: Always
      volumes:
        - name: opensearch
          persistentVolumeClaim:
            claimName: opensearch
status: {}
