rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/reportportal: "true"
        io.kompose.service: rabbitmq
    spec:
      containers:
        - env:
            - name: RABBITMQ_DEFAULT_PASS
              value: rabbitmq
            - name: RABBITMQ_DEFAULT_USER
              value: rabbitmq
          image: bitnami/rabbitmq:3.12.2-debian-11-r8
          livenessProbe:
            exec:
              command:
                - rabbitmqctl
                - status
            failureThreshold: 5
            periodSeconds: 30
            timeoutSeconds: 30
          name: rabbitmq
          resources: {}
      restartPolicy: Always
status: {}
