uat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: 1.26.0 (40646f47)
    traefik.expose: "true"
    traefik.http.middlewares.uat-strip-prefix.stripprefix.prefixes: /uat
    traefik.http.routers.uat.middlewares: uat-strip-prefix@docker
    traefik.http.routers.uat.rule: PathPrefix(`/uat`)
    traefik.http.routers.uat.service: uat
    traefik.http.services.uat.loadbalancer.server.port: "9999"
    traefik.http.services.uat.loadbalancer.server.scheme: http
  creationTimestamp: null
  labels:
    io.kompose.service: uat
  name: uat
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: uat
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert
        kompose.version: 1.26.0 (40646f47)
        traefik.expose: "true"
        traefik.http.middlewares.uat-strip-prefix.stripprefix.prefixes: /uat
        traefik.http.routers.uat.middlewares: uat-strip-prefix@docker
        traefik.http.routers.uat.rule: PathPrefix(`/uat`)
        traefik.http.routers.uat.service: uat
        traefik.http.services.uat.loadbalancer.server.port: "9999"
        traefik.http.services.uat.loadbalancer.server.scheme: http
      creationTimestamp: null
      labels:
        io.kompose.network/reportportal: "true"
        io.kompose.service: uat
    spec:
      containers:
        - env:
            - name: DATASTORE_TYPE
              value: filesystem
            - name: JAVA_OPTS
              value: -Djava.security.egd=file:/dev/./urandom -XX:MinRAMPercentage=60.0 -XX:MaxRAMPercentage=90.0
            - name: RP_AMQP_APIPASS
              value: rabbitmq
            - name: RP_AMQP_APIUSER
              value: rabbitmq
            - name: RP_AMQP_HOST
              value: rabbitmq
            - name: RP_AMQP_PASS
              value: rabbitmq
            - name: RP_AMQP_PORT
              value: "5672"
            - name: RP_AMQP_USER
              value: rabbitmq
            - name: RP_DB_HOST
              value: postgres
            - name: RP_DB_NAME
              value: reportportal
            - name: RP_DB_PASS
              value: rppass
            - name: RP_DB_USER
              value: rpuser
            - name: RP_INITIAL_ADMIN_PASSWORD
              value: erebus
            - name: RP_SAML_SESSION-LIVE
              value: "4320"
            - name: RP_SESSION_LIVE
              value: "86400"
          image: reportportal/service-authorization:5.11.0
          livenessProbe:
            exec:
              command:
                - curl -f http://0.0.0.0:9999/health
            failureThreshold: 10
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 30
          name: reportportal-uat
          resources: {}
          volumeMounts:
            - mountPath: /data/storage
              name: storage
      restartPolicy: Always
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: storage
status: {}
